# pedersen-commitment

./: Makefile  README.md  global.json
.devcontainer/: devcontainer.json
.github/: release.yaml  renovate.json
.github/actions/unpack-rust-artifacts/: action.yaml
.github/workflows/: build-release.yaml  create-release.yaml  pullrequest-verify.yaml  pullrequest-verify.yml  release-published.yaml  reusable-build-nuget-package.yaml  reusable-build-rust-artifacts.yaml  reusable-tag-version.yaml  sonarcloud.yaml
src/: PedersenCommitment.sln
src/Bench/: Bench.csproj  Main.cs
src/Native/: Cargo.toml  Directory.Build.targets  rust-ffi.rsproj
src/Native/src/: generator.rs  lib.rs  point.rs  rangeproof.rs  scalar.rs  transscript.rs  util.rs
src/ProjectOrigin.PedersenCommitment/: Directory.Build.props  Directory.Build.targets  ProjectOrigin.PedersenCommitment.csproj  README.md
src/ProjectOrigin.PedersenCommitment.Tests/: ProjectOrigin.PedersenCommitment.Tests.csproj
src/ProjectOrigin.PedersenCommitment/Ristretto/: Generator.cs  Library.cs  Oracle.cs  Point.cs  RangeProof.cs  Scalar.cs  Util.cs
