[package]
name = "rust-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = { git = "https://github.com/zkcrypto/bulletproofs" }
curve25519-dalek = { version = "4.1.2", features = ["digest", "rand_core"] }
merlin = "3.0.0"
rand = "0.8.5"
sha3 = "0.10"
